[gd_scene load_steps=4 format=3 uid="uid://dhqknsh7bpvae"]

[ext_resource type="Script" uid="uid://dytus0psytapu" path="res://Scripts/gui.gd" id="1_qyd3e"]
[ext_resource type="Texture2D" uid="uid://cboq27bta5uxy" path="res://Assets/Others/RPG_Creature_Archetypes_Undead_Skull_Death.png" id="2_bm56d"]
[ext_resource type="Texture2D" uid="uid://bhlljwqsfn2s0" path="res://Assets/Others/Software_Clock_Time_Wait_2.png" id="2_n5m23"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qyd3e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_n5m23")
expand_mode = 2

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "00:00"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_bm56d")
expand_mode = 2

[node name="DeathsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
